texi2html/test/invalid/res_all/texi_empty_ifclear/empty_ifclear.texi.first
\input texinfo @c -*-texinfo-*-
@setfilename empty_ifclear.info
@node Top
@top Test for empty @@if*


Something




Something ifset



@bye
